--- a/res/layout/activity_auth_user.xml
+++ b/res/layout/activity_auth_user.xml
@@ -5,37 +5,36 @@
     android:layout_height="match_parent"
     android:gravity="center|top"
     android:orientation="vertical" >
-
+	
+     
     <EditText 
         android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ems="10"
+        android:layout_marginTop="20dp"
         android:hint="@string/user_name"/>
     
     <EditText 
         android:id="@+id/password"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ems="10"
+         android:layout_marginTop="10dp"
         android:inputType="textPassword"
         android:hint="@string/password"/>
-   
+
     <Button
         android:id="@+id/btnConvert"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
+        android:textSize="25dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:onClick="sendMessage"
-        android:text="Auth User" />
+        android:layout_gravity="right"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:onClick="login"
+        android:text="@string/login" />
+        
+
     
-    <Button
-        android:id="@+id/gtRegister"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:onClick="goToRegister"
-        android:text="Register" />
 </LinearLayout>
