--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,20 +7,26 @@
     android:gravity="center|center_vertical|top"
     android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/btnWriteDB"
-        android:layout_width="wrap_content"
+    <TextView 
+        android:text="Breathing Rate System"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="41dp"
-        android:onClick="writeDB"
-        android:text="Write To DB" />
+        android:textSize="50dp"
+        android:layout_marginTop="50dp"
+        android:gravity="center"/>
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:onClick="goToLogin"
+        android:text="Login" />
 
     <Button
-        android:id="@+id/btnSOAP"
-        android:layout_width="wrap_content"
+        android:id="@+id/btnRegister"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="89dp"
-        android:onClick="soapMethods"
-        android:text="SOAP Methods" />
-
+        android:layout_marginTop="20dp"
+        android:onClick="goToRegister"
+        android:text="Register" />
 </LinearLayout>
