--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -4,12 +4,39 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+     <EditText
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/title"
+        android:ems="10">
+        <requestFocus />
+    </EditText>
+    
     <EditText 
         android:id="@+id/reg_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/reg_user_name"/>
+        android:hint="@string/user_name"/>
+     
+     <EditText
+        android:id="@+id/firstName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/firstName"
+        android:inputType="textPersonName" >
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/lastName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/lastName"
+        android:inputType="textPersonName" />	
     
     <EditText 
         android:id="@+id/reg_password"
@@ -17,13 +44,16 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="@string/reg_password"/>
-
+        android:hint="@string/password"/>
+	
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="right"
         android:onClick="doRegister"
-        android:text="Register" />
+        android:text="@string/register" />
 
 </LinearLayout>
