--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,18 +7,18 @@
     android:gravity="center|center_vertical|top"
     android:orientation="vertical" >
 
-    <TextView 
-        android:text="Breathing Rate System"
+    <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textSize="50dp"
-        android:layout_marginTop="50dp"
-        android:gravity="center"/>
+        android:layout_weight="10"
+        android:gravity="center"
+        android:text="Breathing Rate System"
+        android:textSize="50dp" />
+
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:onClick="goToLogin"
         android:text="Login" />
 
@@ -26,7 +26,6 @@
         android:id="@+id/btnRegister"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:onClick="goToRegister"
         android:text="Register" />
 </LinearLayout>
