--- a/res/menu/activity_register.xml
+++ b/res/menu/activity_register.xml
@@ -3,4 +3,7 @@
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/menu_home"
+        android:title="@string/menu_home"
+        android:showAsAction="ifRoom|withText" />
 </menu>
